# calendar-desktop

./: .env.example  .gitignore  CLAUDE.md  README.md  build_release_dmg.sh  package-lock.json
calendar-desktop.xcodeproj/: project.pbxproj
calendar-desktop.xcodeproj/project.xcworkspace/xcuserdata/mchangeat.xcuserdatad/: UserInterfaceState.xcuserstate
calendar-desktop.xcodeproj/xcshareddata/xcschemes/: calendar-desktop.xcscheme
calendar-desktop.xcodeproj/xcuserdata/mchangeat.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
calendar-desktop.xcodeproj/xcuserdata/mchangeat.xcuserdatad/xcschemes/: xcschememanagement.plist
frontend/: .env.demo  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  declarations.d.ts  i18n.ts  index.css  types.ts
frontend/src-tauri/: Calendar.entitlements  Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: auth.rs  eventkit.rs  ews.rs  gmail.rs  http.rs  imap.rs  jmap.rs  lib.rs  mail.rs  oauth_error.html  oauth_success.html
frontend/src-tauri/src/ews/: calendar.rs  mod.rs
frontend/src/apps/: MailApp.tsx
frontend/src/components/: AppHeader.tsx  AttendeeInput.tsx  CreateEventModal.tsx  DayEventsTimeline.tsx  EventModal.tsx  FreeBusyGrid.tsx  MiniCalendar.tsx  SearchModal.tsx  SearchResultsView.tsx  Sidebar.tsx  TagInsightsView.tsx
frontend/src/components/event/: FreeBusySection.tsx
frontend/src/constants/: calendarThemes.ts
frontend/src/demo/: demoData.ts
frontend/src/features/calendar/: CalendarPage.tsx
frontend/src/features/calendar/components/: AppHeader.tsx  AttendeeInput.tsx  CreateEventModal.tsx  DayEventsTimeline.css  DayEventsTimeline.tsx  EventModal.tsx  FreeBusyGrid.tsx  MiniCalendar.tsx  SearchModal.tsx  SearchResultsView.tsx  Sidebar.tsx  TagInsightsView.tsx
frontend/src/features/calendar/hooks/: useCalendarLogic.ts  useCalendarQueries.ts  useEWSEvents.ts  useEventKitEvents.ts  useGoogleEvents.ts  useICSEvents.ts  useNextcloudEvents.ts
frontend/src/features/mail/: MailPage.tsx  composerTypes.ts  constants.ts  folderUtils.ts  types.ts  utils.ts
frontend/src/hooks/: useCalendarOperations.ts  useEWSEvents.ts  useEventKitEvents.ts  useGoogleEvents.ts  useICSEvents.ts  useNextcloudEvents.ts
frontend/src/locales/en/: translation.json
frontend/src/locales/fr/: translation.json
frontend/src/pages/: CalendarPage.tsx  ConfigPage.tsx  ImapAccountManageModal.tsx  JmapAccountManageModal.tsx
frontend/src/shared/: queryClient.ts  types.ts
frontend/src/shared/components/: AppTabs.tsx  WindowSwitcher.tsx
frontend/src/shared/store/: ExchangeAuthStore.tsx  FontSizeStore.tsx  GoogleAuthStore.tsx  ImapAuthStore.tsx  JmapAuthStore.tsx  LanguageStore.tsx  LayoutStore.tsx
frontend/src/shared/utils/: tauriOAuth.ts
frontend/src/store/: CalendarGroupStore.tsx  CalendarStore.tsx  LanguageStore.tsx  TagStore.tsx  ThemeStore.tsx  defaultCalendarStore.ts  googleClientConfig.ts
frontend/src/utils/: calendarUtils.ts  eventCache.ts  ewsApi.ts  googleCalendarApi.ts  nextcloudCalendarApi.ts  parseICS.ts
(+63 files in other folders)
