[package]
name = "calendar"
version = "0.1.0"
description = "Calendar Desktop App"
authors = []
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
webbrowser = "0.8"
urlencoding = "2.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
async-imap = { version = "0.9", default-features = false, features = ["runtime-tokio"] }
futures = "0.3"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "hostname", "smtp-transport", "builder"] }
mailparse = "0.15"
jmap-client = "0.2"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1.0"
webpki-roots = "0.26"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
  "NSArray", "NSDate", "NSError", "NSLocale", "NSPredicate", "NSString", "NSTimeZone", "NSURL",
] }
objc2-event-kit = { version = "0.3", default-features = false, features = [
  "EKCalendar", "EKCalendarItem", "EKEvent", "EKEventStore", "EKObject",
  "EKParticipant", "EKSource", "EKTypes",
  "block2", "objc2-app-kit",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSColor", "NSApplication", "NSDockTile"] }
block2 = "0.6"

[patch.crates-io]
jmap-client = { path = "vendor/jmap-client" }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
